feat: split backend/frontend, add React UI and doc deletion

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,38 @@
+# Environment files
 .env
-.env.example
+.env.*
+!.env.example
+
+# Python
+__pycache__/
+*.py[cod]
+*.pyo
+*.pyd
+*.egg-info/
+.venv/
+venv/
+.envrc
+.pytest_cache/
+.mypy_cache/
+.ruff_cache/
+
+# Django
+staticfiles/
+db.sqlite3
+*.sqlite3
+celerybeat-schedule
+celerybeat.pid
+
+# Runtime data
+db/*
+chroma_store/*
+media/*
+!/db/.gitkeep
+!/chroma_store/.gitkeep
+!/media/.gitkeep
+
+# Editors/OS
+.idea/
+.vscode/
+.DS_Store
+Thumbs.db
