feat: split backend/frontend, add React UI and doc deletion

--- a/.gitignore
+++ b/.gitignore
@@ -24,12 +24,18 @@ celerybeat-schedule
 celerybeat.pid
 
 # Runtime data
-db/*
-chroma_store/*
-media/*
-!/db/.gitkeep
-!/chroma_store/.gitkeep
-!/media/.gitkeep
+backend/db/*
+backend/chroma_store/*
+backend/media/*
+!backend/db/.gitkeep
+!backend/chroma_store/.gitkeep
+!backend/media/.gitkeep
+
+# Frontend
+frontend/node_modules/
+frontend/dist/
+frontend/.env
+frontend/.env.*
 
 # Editors/OS
 .idea/
