--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,6 +1,8 @@
 ﻿DJANGO_SECRET_KEY=change-me
 DJANGO_DEBUG=1
 DJANGO_ALLOWED_HOSTS=localhost,127.0.0.1
+CORS_ALLOWED_ORIGINS=http://localhost:5173
+CORS_ALLOW_ALL=0
 
 OPENAI_API_KEY=your-openai-key
 OPENAI_BASE_URL=https://api.openai.com/v1
