--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,7 @@
 ﻿Django==5.0.6
 djangorestframework==3.15.2
 django-ratelimit==4.1.0
+django-cors-headers==4.4.0
 django-redis==5.4.0
 celery==5.4.0
 redis==5.0.7
