feat: prefill demo login and auto-create superuser

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -18,9 +18,16 @@ CHROMA_PATH=/app/chroma_store
 REDIS_URL=redis://redis:6379/0
 CELERY_BROKER_URL=redis://redis:6379/0
 CELERY_RESULT_BACKEND=redis://redis:6379/0
+CELERY_WORKER_CONCURRENCY=1
+CELERY_WORKER_PREFETCH_MULTIPLIER=1
+CELERY_WORKER_MAX_TASKS_PER_CHILD=50
 
 ANONYMIZED_TELEMETRY=False
 SQLITE_PATH=/app/db/db.sqlite3
+RUN_MIGRATIONS=1
+DJANGO_SUPERUSER_USERNAME=
+DJANGO_SUPERUSER_PASSWORD=
+DJANGO_SUPERUSER_EMAIL=
 
 STORE_UPLOADS_ON_DISK=1
 ENABLE_REINDEX=1
