--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -16,4 +16,7 @@ COPY . .
 
 RUN python manage.py collectstatic --noinput
 
+RUN chmod +x /app/entrypoint.sh
+
+ENTRYPOINT ["/app/entrypoint.sh"]
 CMD ["gunicorn", "rag_kb.wsgi:application", "--bind", "0.0.0.0:8000"]
