feat: update database and storage paths in environment settings

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -13,7 +13,7 @@ CHUNK_SIZE=900
 CHUNK_OVERLAP=150
 TOP_K_DEFAULT=6
 
-CHROMA_PATH=/app/chroma_store
+CHROMA_PATH=/tmp/chroma_store
 
 REDIS_URL=redis://redis:6379/0
 CELERY_BROKER_URL=redis://redis:6379/0
@@ -23,7 +23,7 @@ CELERY_WORKER_PREFETCH_MULTIPLIER=1
 CELERY_WORKER_MAX_TASKS_PER_CHILD=50
 
 ANONYMIZED_TELEMETRY=False
-SQLITE_PATH=/app/db/db.sqlite3
+SQLITE_PATH=/tmp/db.sqlite3
 RUN_MIGRATIONS=1
 DJANGO_SUPERUSER_USERNAME=
 DJANGO_SUPERUSER_PASSWORD=
