--- a/backend/.env.example
+++ b/backend/.env.example
@@ -13,8 +13,6 @@ CHUNK_SIZE=900
 CHUNK_OVERLAP=150
 TOP_K_DEFAULT=6
 
-CHROMA_PATH=/tmp/chroma_store
-
 REDIS_URL=redis://redis:6379/0
 CELERY_BROKER_URL=redis://redis:6379/0
 CELERY_RESULT_BACKEND=redis://redis:6379/0
@@ -23,6 +21,7 @@ CELERY_WORKER_PREFETCH_MULTIPLIER=1
 CELERY_WORKER_MAX_TASKS_PER_CHILD=50
 
 ANONYMIZED_TELEMETRY=False
+DATABASE_URL=postgresql://rag_kb:rag_kb@postgres:5432/rag_kb
 SQLITE_PATH=/tmp/db.sqlite3
 RUN_MIGRATIONS=1
 DJANGO_SUPERUSER_USERNAME=
