--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,11 +3,13 @@ djangorestframework==3.15.2
 django-ratelimit==4.1.0
 django-cors-headers==4.4.0
 django-redis==5.4.0
+dj-database-url==2.2.0
+pgvector==0.2.5
+psycopg[binary]==3.2.2
 celery==5.4.0
 redis==5.0.7
 python-dotenv==1.0.1
 openai==1.40.6
-chromadb==0.5.5
 pypdf==4.3.1
 gunicorn==22.0.0
 httpx==0.27.0
